--- a/public/css/tailwindcss.css
+++ b/public/css/tailwindcss.css
@@ -170,6 +170,10 @@
     width: 75px;
 }
 
+.input_cs > input {
+    max-width: 140px;
+}
+
 .hover\:bg-blue-700:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(29 78 216 / var(--tw-bg-opacity));
